# wireguard

./: README.txt  build.py  client.tmpl  create-device.py  delete-pod  exec-into-pod  pyproject.toml  secret.tmpl  wireguard.ini.sample  wireguard.yaml
