[project]
name = "wireguard"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Michali",email = "pc@michali.net"}
]
readme = "README.txt"
requires-python = "<4.0,>=3.13"
dependencies = [
    "qrcode (>=8.0,<9.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
